undo and instruction